lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:46: error: expected class or object definition
def descend(sol:Double) {
^Lander:53: error: Unmatched closing brace '}' ignored here
}
^